# WalletHub-

./: Makefile  README.md  alembic.ini  pyproject.toml
Cryptos/auth_service/: Dockerfile  docker-compose.yml
Cryptos/auth_service/app/: main.py
Cryptos/auth_service/app/core/: config.py  path.py
Cryptos/auth_service/app/db/: session.py
Cryptos/auth_service/app/migrations/: env.py
Cryptos/auth_service/app/migrations/versions/: 8dde8bfa96a4_initial.py
Cryptos/auth_service/app/models/: user_model.py
Cryptos/auth_service/app/routes/v1/: user.py
Cryptos/auth_service/app/schemas/: user_schema.py
Cryptos/auth_service/app/services/: security.py  user_service.py
