[tool.poetry]
name = "wallethub-"
version = "0.1.0"
description = ""
authors = ["Anakion <andreygolosov786@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
toml = "^0.10.2"
argon2-cffi = "^23.1.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
